# outages-ge-bot

./: .dockerignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml  requirements.txt  settings.py  setup.cfg
.github/workflows/: code_coverage.yml  deploy.yml  lint_test.yml  pull_request_check.yml
app/: main.py
app/db/: __init__.py  address.py  base.py  chat.py  db.py  exceptions.py  functions.py  models.py  sentoutage.py
app/handlers/: additional.py  addresses.py  greeting.py  jobs.py  start.py
app/keyboards/: basic_kbs.py  main_kb.py  row.py
app/middlewares/: apscheduler.py
app/scheduler/: tasks.py
app/scrap/: gwp.py  parser.py
app/scrap/providers/: gwp.py
app/scrapers/: base.py  gwp.py  telasi.py
app/utils/: translator.py
migrations/: env.py
migrations/versions/: 14d6239d3c0a_first_migration.py  27374f23feaf_remove_translated_fields.py  504d572d3214_add_full_address_field_to_address_model.py  5c3b5217a283_add_timestamp_field_to_sentoutage.py  6d440823786e_add_job_uuid_field_to_chat_model.py  7ab5f9d543e1_first_migration.py  7f755b058fde_update_table_outages_with_emergency_row.py  9bb5bb32c40a_first_migration.py  a3ead87ac4f4_add_unique_constraint_to_sentoutage_.py  aafa4dc55c83_first_migration.py  c505df839654_create_table_outages.py  c5939b9c4bda_add_unique_constraint_and_repr.py  d4dddb7aabc9_add_unique_constraint_to_address_model.py  da207b55b9c5_change_chat_model_tg_chat_id_type_int_.py
tests/: test_dummy.py
