[tool.poetry]
name = "outages-ge-bot"
version = "0.1.0"
description = "Stay tuned with nearest outages in Georgia with this Telegram bot"
authors = ["roaddust2 <roaddust2@yahoo.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = {version = "^3.0.0rc1", allow-prereleases = true}
sqlalchemy = "2.0.18"
psycopg2-binary = "2.9.6"
alembic = "1.11.1"
python-dotenv = "1.0.0"
requests = "2.31.0"
beautifulsoup4 = "4.12.2"
deep-translator = "1.11.4"
apscheduler = "3.10.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.4.0"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
