[tool.poetry]
name = "outages-ge-bot"
version = "0.1.7"
description = "Telegram bot that notifies you of outages in Georgia (the country)"
authors = ["roaddust2 <roaddust2@yahoo.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "3.0.0"
sqlalchemy = "2.0.20"
psycopg2-binary = "2.9.7"
alembic = "1.12.0"
asyncpg = "0.28.0"
python-dotenv = "1.0.0"
beautifulsoup4 = "4.12.2"
deep-translator = "1.11.4"
apscheduler = "3.10.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.0"
coverage = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
